syntax = "proto3";
package protobufs;

message mine_serial_number{
  string serial_number = 1;
}

message mine_pin{
  string pin = 1;
}

